--- a/_config.yml
+++ b/_config.yml
@@ -14,20 +14,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 name: Alex Wainger
-title: MS Data Science Student at Columbia, incoming Facebook Data Engineer
+title:
 email: alex.wainger@columbia.edu
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: "Brown grad, data science master's student at Columbia, incoming data engineer at Facebook."
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "alexwainger.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  alexwainger
 
 # Build settings
 markdown: kramdown
 theme: jekyll-swiss
+theme_color: blue
 plugins:
   - jekyll-feed
 
